--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -42,8 +42,19 @@ jobs:
     - name: check-out code 
       uses: actions/checkout@v4
 
+    - name: Install Trivy
+      shell: bash
+      run: |
+        sudo apt-get update
+        sudo apt-get install wget apt-transport-https gnupg lsb-release -y
+        wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add -
+        echo "deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main" > trivy.list
+        sudo mv trivy.list /etc/apt/sources.list.d/trivy.list
+        sudo apt-get update
+        sudo apt-get install trivy -y
 
-
+    - name: Trivy Scan
+      run: trivy fs --severity HIGH,CRITICAL --format table -o fs-report.txt .
  
     - name: Run Gitleaks
       uses: gitleaks/gitleaks-action@v2
