--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -37,7 +37,7 @@ jobs:
   security-checks:
 
     runs-on: ubuntu-latest
-
+    needs: build
     steps:
     - name: check-out code 
       uses: actions/checkout@v4
