--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -53,6 +53,11 @@ jobs:
         sudo apt-get update
         sudo apt-get install trivy -y
 
+  job:
+    runs-on: ubuntu-latest
+    needs: security-checks
+    steps:
+
     - name: Trivy Scan
       run: trivy fs --severity HIGH,CRITICAL --format table -o fs-report.txt .
  
