--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,7 +17,7 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
     - uses: actions/checkout@v4
@@ -36,7 +36,7 @@ jobs:
       
   security-checks:
 
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: build
     steps:
     - name: check-out code 
@@ -52,14 +52,13 @@ jobs:
         sudo mv trivy.list /etc/apt/sources.list.d/trivy.list
         sudo apt-get update
         sudo apt-get install trivy -y
-
-  job:
-    runs-on: ubuntu-latest
-    needs: security-checks
-    steps:
-
     - name: Trivy Scan
       run: trivy fs --severity HIGH,CRITICAL --format table -o fs-report.txt .
+
+  job:
+    runs-on: self-hosted
+    needs: security-checks
+    steps:
  
     - name: Run Gitleaks
       uses: gitleaks/gitleaks-action@v2
